--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./app.js"
+    "start": "node ./app.js"
   },
   "dependencies": {
     "@sap/hana-client": "^2.7.16",
