--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "b1-service-layer": "^1.0.3",
     "base64-img": "^1.0.4",
     "body-parser": "^1.19.0",
+    "buffer": "^6.0.3",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
